@@ -1,0 +1,4 @@
+#define TE_GNU
+#define LOCAL_LABELS_FB 1
+
+#include "obj-format.h"
